--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Read The Docs Jekyll Theme
 description: Port of the Read the Docs theme to Jekyll to use with GitHub Pages.
+markdown: kramdown
 remote_theme: carlosperate/jekyll-theme-rtd
 
 # Theme settings:
