--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Handbuch Metadaten-Diffusion (MDD) und Bereitstellung offener Behördendaten (OGD)
 description: Handbuch des Datenkatalogs des Kantons Zürich zur Metadaten-Diffusion (MDD) und Bereitstellung offener Behördendaten (OGD).
 markdown: kramdown
-remote_theme: carlosperate/jekyll-theme-rtd
+# remote_theme: carlosperate/jekyll-theme-rtd
 
 # Theme settings:
 site_author: Fach- und Koordinationsstelle OGD
