--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Leitlinien zur Publikation einfach nutzbarer Daten
-description: Kanton Zürich, Fachausschuss Open Government Data - Status: ENTWURF
+description: Kanton Zürich, Fachausschuss Open Government Data - Status (ENTWURF)
 markdown: kramdown
 # remote_theme: carlosperate/jekyll-theme-rtd
 theme: jekyll-theme-cayman
